--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start",
-    "tunnel": "node scripts/tunnel.js"
+    "start": "next start"
   },
   "dependencies": {
     "@ai-sdk/groq": "latest",
@@ -58,7 +57,6 @@
     "mysql2": "^3.6.5",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
-    "ngrok": "4.3.3",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
