--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
+    "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
@@ -57,6 +58,7 @@
     "mysql2": "^3.6.5",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "picocolors": "^1.1.1",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
@@ -65,6 +67,7 @@
     "recharts": "2.15.0",
     "resend": "latest",
     "sonner": "^1.7.1",
+    "source-map-js": "^1.2.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
